# libstackexchange

./: LICENSE  README.md  doctests.hs  libstackexchange.cabal
examples/: badges-watcher.hs  rep-watcher.hs  server-side-authentication.hs
src/Control/Monad/: StackExchange.hs
src/Data/Aeson/: Lens.hs
src/Network/: StackExchange.hs
src/Network/StackExchange/: API.hs  Auth.hs  JSON.hs  Request.hs  Response.hs  Types.hs  URI.hs
src/Network/StackExchange/API/: Answer.hs  Filter.hs
tests/aeson-lens/: Main.hs  TH.hs
tests/request/: Main.hs
