name:          libstackexchange
version:       0.1.0.0
synopsis:      Wrapper to stackexchange sites' API
homepage:      https://github.com/supki/libstackexchange
license:       MIT
license-file:  LICENSE
author:        Matvey Aksenov
maintainer:    matvey.aksenov@gmail.com
category:      NetworkAPIs
build-type:    Simple
cabal-version: >= 1.8

library
  build-depends: base >= 4.6,
                 bytestring,
                 containers,
                 data-default,
                 mtl,
                 attoparsec,
                 text,
                 aeson,
                 http-conduit,
                 lens >= 3.0.2
  hs-source-dirs: src
  exposed-modules: Network.StackExchange
                   Network.StackExchange.API
                   Network.StackExchange.Request
                   Network.StackExchange.Types
                   Network.StackExchange.JSON
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite aeson-lens
  build-depends: base >= 4.6,
                 template-haskell,
                 bytestring,
                 mtl,
                 attoparsec,
                 aeson,
                 lens,
                 HUnit,
                 libstackexchange
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/aeson-lens
  other-modules: TH
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite request
  build-depends: base >= 4.6,
                 containers,
                 text,
                 QuickCheck,
                 libstackexchange
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/request
  ghc-options: -Wall
               -fno-warn-unused-do-bind
