name:          libstackexchange
version:       0.1.0.0
synopsis:      Wrapper to stackexchange sites' API
homepage:      https://github.com/supki/libstackexchange
license:       MIT
license-file:  LICENSE
author:        Matvey Aksenov
maintainer:    matvey.aksenov@gmail.com
category:      NetworkAPIs
build-type:    Simple
cabal-version: >= 1.8

flag enable-examples
  default: False

library
  build-depends: base >= 4.6,
                 bytestring,
                 containers,
                 data-default,
                 attoparsec,
                 text,
                 aeson,
                 http-conduit,
                 lens
  hs-source-dirs: src
  exposed-modules: Network.StackExchange
                   Network.StackExchange.API
                   Network.StackExchange.Auth
                   Network.StackExchange.Request
                   Network.StackExchange.Response
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite aeson-lens
  build-depends: base >= 4.6,
                 template-haskell,
                 bytestring,
                 attoparsec,
                 aeson,
                 lens,
                 HUnit,
                 libstackexchange
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/aeson-lens
  other-modules: TH
  ghc-options: -Wall
               -fno-warn-unused-do-bind

test-suite request
  build-depends: base >= 4.6,
                 containers,
                 text,
                 QuickCheck,
                 libstackexchange
  type: exitcode-stdio-1.0
  main-is: Main.hs
  hs-source-dirs: tests/request
  ghc-options: -Wall
               -fno-warn-unused-do-bind

executable rep-watcher
  if !flag(enable-examples)
    buildable: False
  build-depends: base >= 4.6,
                 lens,
                 libstackexchange
  main-is: examples/rep-watcher.hs

executable badges-watcher
  if !flag(enable-examples)
    buildable: False
  build-depends: base >= 4.6,
                 lens,
                 libstackexchange
  main-is: examples/badges-watcher.hs

executable server-side-authentication
  if !flag(enable-examples)
    buildable: False
  build-depends: base >= 4.6,
                 lens,
                 mtl,
                 happstack-server,
                 libstackexchange
  main-is: examples/server-side-authentication.hs
